# raspberryROS

./: CMakeLists.txt  CMakeLists.txt~  package.xml  tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/aleatorio/entrena2/: log.text
entrenamientos/entrenamiento_ViejasRegiones/aleatorio/entrena4/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena14/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena15/: inicial.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena17/: inicial.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena22/: inicial.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena23/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena28/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena29/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena34/: log.text  tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena36/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena38/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena4/: inicial.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena41/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena42/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena46/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y1/entrena9/: inicial.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena1/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena14/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena19/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena2/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena4/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK2_Y7/entrena5/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena13/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena14/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena16/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena19/: log.text  tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena3/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena4/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena5/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK3_Y1/entrena7/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena11/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena12/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena16/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena19/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena6/: tabla.txt
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena8/: log.text
entrenamientos/entrenamiento_ViejasRegiones/entrenaK5_Y1/entrena9/: log.text
entrenamientos/nuevasRegiones/: inicial.txt  tabla.txt
entrenamientos/nuevasRegiones/K3_Y1/: tabla.txt
entrenamientos/nuevasRegiones/K5_Y7/: tabla.txt
src/: AprendizajeQ.cpp  AprendizajeQ.hpp  Arbotix.cpp  Arbotix.hpp  BuscarArco.cpp  CamAbajoMedio.cpp  CamArribaArribaMedio.cpp  CamArribaArribaMedio.hpp  CamArribaMedio.cpp  CamDerechaAbajo.cpp  CamDerechaAbajo.hpp  CamDerechaArriba.cpp  CamDerechaMedio.cpp  CamIzquierdaAbajo.cpp  CamIzquierdaArriba.cpp  CamIzquierdaMedio.cpp  CamIzquierdaMedio.hpp  Camara.cpp  Camara.hpp  aprendizajeQ.cpp  aprendizajeQ.hpp  detectar.cpp  detectar.cpp~  detectorArco.cpp  detectorArco.hpp  detectorPelota.cpp  detectorPelota.hpp  main  main.cpp  makefile  prueba.txt  prueba.txt~  serviceTest.cpp  tabla.txt
src/deteccion/: deteccion.txt  deteccion100.txt  deteccion80.txt  deteccionfalsa.txt
src/entrenamientos/: tablaCeros.txt
src/entrenamientos/entrena1/: log.text  tabla.txt  tablaInicial.txt
src/entrenamientos/entrena2/: log.text
src/entrenamientos/entrena3/: log.text  tabla.txt
src/entrenamientos/entrena4/: log.text  tabla.txt
src/entrenamientos/entrena5/: tabla.txt
src/entrenamientos/entrena6/: log.text  tabla.txt
src/entrenamientos/entrena7/: anterior.txt  log.text
src/entrenamientos/entrenaK3_Y1/: tabla.txt
src/entrenamientos/entrenaK5_Y1/: log.text
src/entrenamientos/entrenarK2_Y1/: tablaFinal.txt
src/estadosArco/: CamDerecha.cpp  CamDerecha.hpp  CamDerecha.hpp~  CamIzquierda.cpp  CamIzquierda.cpp~  CamIzquierda.hpp  CamIzquierda.hpp~  CamMedio.cpp  CamMedio.cpp~  CamMedio.hpp
src/estadosCamara/: CamAbajoMedio.cpp  CamAbajoMedio.cpp~  CamAbajoMedio.hpp  CamAbajoMedio.hpp~  CamArribaArribaMedio.cpp  CamArribaArribaMedio.hpp  CamArribaMedio.cpp  CamArribaMedio.hpp  CamArribaMedio.hpp~  CamDerechaAbajo.cpp  CamDerechaAbajo.hpp  CamDerechaAbajo.hpp~  CamDerechaArriba.cpp  CamDerechaArriba.hpp  CamDerechaArriba.hpp~  CamDerechaMedio.cpp  CamDerechaMedio.hpp  CamDerechaMedio.hpp~  CamIzquierdaAbajo.cpp  CamIzquierdaAbajo.hpp  CamIzquierdaAbajo.hpp~  CamIzquierdaArriba.cpp  CamIzquierdaArriba.hpp  CamIzquierdaArriba.hpp~  CamIzquierdaMedio.cpp  CamIzquierdaMedio.hpp
src/estadosPateo/: PateoCentro.cpp  PateoCentro.cpp~  PateoCentro.hpp  PateoDerecha.cpp  PateoDerecha.cpp~  PateoDerecha.hpp  PateoIzquierda.cpp  PateoIzquierda.cpp~  PateoIzquierda.hpp  PateoIzquierda.hpp~
src/pruebasMFIzquierda/: log1.txt  log10.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
src/pruebasMovFijos/: log1.txt  log10.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
src/puebasMFDerecha/: log1.txt  log10.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
testing/testingNuevasRegiones/K3_Y1_iniczd/: log.txt
testing/testingViejasRegiones/K2_Y7/: tabla.txt
(+896 files in other folders)
